[gd_scene load_steps=38 format=3 uid="uid://deabbebgexdkl"]

[ext_resource type="Script" path="res://Scripts/cup.gd" id="1_yd14q"]
[ext_resource type="Texture2D" uid="uid://bihkhw4wjaxrn" path="res://Assets/cups/blue/blue_cup_bottom.png" id="2_q70a7"]
[ext_resource type="Texture2D" uid="uid://bspyit1counxy" path="res://Assets/cups/blue/blue_cup_top.png" id="3_j5lsj"]
[ext_resource type="Script" path="res://Scripts/cup_bottom.gd" id="3_lt7xc"]
[ext_resource type="Script" path="res://Scripts/cup_top.gd" id="5_bvcwp"]
[ext_resource type="Texture2D" uid="uid://dd6ttjhperdlx" path="res://Assets/filling_cup/cup_animation1.png" id="6_2cvda"]
[ext_resource type="Texture2D" uid="uid://dw48h64bs20o7" path="res://Assets/filling_cup/br-50009109-acacb32f2bc4b5b48bc5a4b9bf36da3e.png" id="6_h0b5k"]
[ext_resource type="Texture2D" uid="uid://1glwu1mwb731" path="res://Assets/filling_cup/cup_animation2.png" id="7_wfv88"]
[ext_resource type="Texture2D" uid="uid://d1btbqmgj17yu" path="res://Assets/filling_cup/cup_animation3.png" id="8_mi8a7"]
[ext_resource type="Texture2D" uid="uid://cuhbiyw28q2f1" path="res://Assets/filling_cup/cup_animation4.png" id="9_jjlmf"]
[ext_resource type="Texture2D" uid="uid://cdgn15lgchywi" path="res://Assets/filling_cup/cup_animation5.png" id="10_p1xyb"]
[ext_resource type="Texture2D" uid="uid://dar1xlqxdmhnh" path="res://Assets/filling_cup/cup_animation6.png" id="11_g2e4m"]
[ext_resource type="Texture2D" uid="uid://curgdilltk4fg" path="res://Assets/filling_cup/cup_animation7.png" id="12_8jgnn"]
[ext_resource type="Texture2D" uid="uid://b6aloaj2n1iap" path="res://Assets/filling_cup/cup_animation8.png" id="13_yh6a0"]
[ext_resource type="Texture2D" uid="uid://coekyro76k2xe" path="res://Assets/filling_cup/cup_animation9.png" id="14_khnr1"]
[ext_resource type="Texture2D" uid="uid://11wijl7jv5uh" path="res://Assets/filling_cup/cup_animation10.png" id="15_satx6"]
[ext_resource type="Texture2D" uid="uid://dw4gpe4ctxaiv" path="res://Assets/filling_cup/cup_animation11.png" id="16_856mo"]
[ext_resource type="Texture2D" uid="uid://cyvdab0tmsknk" path="res://Assets/filling_cup/cup_animation12.png" id="17_bwrgf"]
[ext_resource type="Texture2D" uid="uid://ccjo23vujthhu" path="res://Assets/filling_cup/cup_animation13.png" id="18_8bfi4"]
[ext_resource type="Texture2D" uid="uid://ba10iqvj8hhbs" path="res://Assets/filling_cup/cup_animation14.png" id="19_exku1"]
[ext_resource type="Texture2D" uid="uid://dw3fphbl8aj" path="res://Assets/filling_cup/cup_animation15.png" id="20_q8622"]
[ext_resource type="Texture2D" uid="uid://chre77pkuq24h" path="res://Assets/filling_cup/cup_animation16.png" id="21_shhwm"]
[ext_resource type="Texture2D" uid="uid://bxkhsobou6tg3" path="res://Assets/filling_cup/cup_animation17.png" id="22_yel43"]
[ext_resource type="Texture2D" uid="uid://dwdiq0yk0ekqf" path="res://Assets/filling_cup/cup_animation18.png" id="23_pqfkv"]
[ext_resource type="Texture2D" uid="uid://dbu6urly1rclo" path="res://Assets/filling_cup/cup_animation19.png" id="24_ynff0"]
[ext_resource type="Texture2D" uid="uid://bvkdyx6hhc0xb" path="res://Assets/filling_cup/cup_animation20.png" id="25_t773e"]
[ext_resource type="Texture2D" uid="uid://drfj81oxm68i5" path="res://Assets/filling_cup/cup_animation21.png" id="26_nr630"]
[ext_resource type="Texture2D" uid="uid://dgf21ndbxi35n" path="res://Assets/filling_cup/cup_animation22.png" id="27_bd4c7"]
[ext_resource type="Texture2D" uid="uid://cmcqor5d58epl" path="res://Assets/filling_cup/cup_animation23.png" id="28_vi42p"]
[ext_resource type="Texture2D" uid="uid://s4k378vgga5" path="res://Assets/filling_cup/cup_animation24.png" id="29_4l7od"]
[ext_resource type="Texture2D" uid="uid://di3k6xs52em1k" path="res://Assets/filling_cup/cup_animation25.png" id="30_qont6"]
[ext_resource type="Texture2D" uid="uid://cnhupmh81nxgx" path="res://Assets/filling_cup/cup_animation26.png" id="31_8rfb5"]
[ext_resource type="Texture2D" uid="uid://cqedhu8tg7avj" path="res://Assets/filling_cup/cup_animation27.png" id="32_bmvt1"]
[ext_resource type="Texture2D" uid="uid://cpeg37h4uehm5" path="res://Assets/filling_cup/cup_animation28.png" id="33_yjw81"]
[ext_resource type="Texture2D" uid="uid://dt7t0hmybc3rp" path="res://Assets/filling_cup/cup_animation29.png" id="34_y7txx"]
[ext_resource type="Script" path="res://Scripts/cup_fill.gd" id="35_jf7h3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_e1te2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_h0b5k")
}],
"loop": true,
"name": &"Empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_2cvda")
}, {
"duration": 1.0,
"texture": ExtResource("7_wfv88")
}, {
"duration": 1.0,
"texture": ExtResource("8_mi8a7")
}, {
"duration": 1.0,
"texture": ExtResource("9_jjlmf")
}, {
"duration": 1.0,
"texture": ExtResource("10_p1xyb")
}, {
"duration": 1.0,
"texture": ExtResource("11_g2e4m")
}, {
"duration": 1.0,
"texture": ExtResource("12_8jgnn")
}, {
"duration": 1.0,
"texture": ExtResource("13_yh6a0")
}, {
"duration": 1.0,
"texture": ExtResource("14_khnr1")
}, {
"duration": 1.0,
"texture": ExtResource("15_satx6")
}, {
"duration": 1.0,
"texture": ExtResource("16_856mo")
}, {
"duration": 1.0,
"texture": ExtResource("17_bwrgf")
}, {
"duration": 1.0,
"texture": ExtResource("18_8bfi4")
}, {
"duration": 1.0,
"texture": ExtResource("19_exku1")
}, {
"duration": 1.0,
"texture": ExtResource("20_q8622")
}, {
"duration": 1.0,
"texture": ExtResource("21_shhwm")
}, {
"duration": 1.0,
"texture": ExtResource("22_yel43")
}, {
"duration": 1.0,
"texture": ExtResource("23_pqfkv")
}, {
"duration": 1.0,
"texture": ExtResource("24_ynff0")
}, {
"duration": 1.0,
"texture": ExtResource("25_t773e")
}, {
"duration": 1.0,
"texture": ExtResource("26_nr630")
}, {
"duration": 1.0,
"texture": ExtResource("27_bd4c7")
}, {
"duration": 1.0,
"texture": ExtResource("28_vi42p")
}, {
"duration": 1.0,
"texture": ExtResource("29_4l7od")
}, {
"duration": 1.0,
"texture": ExtResource("30_qont6")
}, {
"duration": 1.0,
"texture": ExtResource("31_8rfb5")
}, {
"duration": 1.0,
"texture": ExtResource("32_bmvt1")
}, {
"duration": 1.0,
"texture": ExtResource("33_yjw81")
}, {
"duration": 1.0,
"texture": ExtResource("34_y7txx")
}],
"loop": false,
"name": &"Filling",
"speed": 20.0
}]

[node name="Cup" type="StaticBody2D"]
position = Vector2(-24, 48)
scale = Vector2(0.5, 0.5)
script = ExtResource("1_yd14q")

[node name="cup_bottom" type="Sprite2D" parent="."]
position = Vector2(-3, -1)
texture = ExtResource("2_q70a7")
region_rect = Rect2(112, 96, 272, 248)
script = ExtResource("3_lt7xc")

[node name="cup_top" type="Sprite2D" parent="."]
texture = ExtResource("3_j5lsj")
region_rect = Rect2(112, 96, 272, 248)
script = ExtResource("5_bvcwp")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(14, 10)
build_mode = 1
polygon = PackedVector2Array(-318, -314, -134, 262, 103, 261, 322, -330, 114, -202, 106, -106, 66, 230, 50, 238, -78, 238, -94, 230, -128, -108, -142, -202)

[node name="LeftLimit" type="Marker2D" parent="."]
position = Vector2(-256, -352)

[node name="RightLimit" type="Marker2D" parent="."]
position = Vector2(272, -336)

[node name="CupFill" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9.53674e-07)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_e1te2")
animation = &"Empty"
autoplay = "Empty"
script = ExtResource("35_jf7h3")

[node name="SpecialBallSpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, -368)
